<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     
    <PreferenceCategory android:title="@string/Generelt" >
        <ListPreference
            android:key="Location"
            android:entries="@array/Location"
            android:summary="%s" 
            android:entryValues="@array/Location"
            android:title="@string/Location"
            android:defaultValue="Aarhus"
            />
        
         <ListPreference
            android:key="Tema"
            android:entries="@array/Tema"
            android:summary="%s" 
            android:entryValues="@array/Tema"
            android:title="@string/Tema"
            android:defaultValue="Rød">
         </ListPreference>
        
    </PreferenceCategory>

  <PreferenceCategory android:title="@string/Påmindelse" >         
   <!-- <PreferenceScreen  android:key="Notification" android:title="@string/Notification">           
    <PreferenceCategory android:title="@string/Påmindelse" > -->

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="Notification_checkbox"
            android:title="@string/Notification">
        </CheckBoxPreference>

        <ListPreference
            android:key="tidligNotifikation"
            android:entries="@array/tidligNotifikation"
            android:summary="%s" 
            android:entryValues="@array/min"
            android:title="@string/Alarm"
            android:dependency="Notification_checkbox" 
            android:defaultValue="0"/>
        
        <CheckBoxPreference
            android:key="Vibration"
            android:title="@string/Vibration"
            android:summary="@string/Vibration_summary"
            android:dependency="Notification_checkbox"
			android:defaultValue="true">
        </CheckBoxPreference>

            
        <ListPreference
	       android:key="Notificationtone"
	       android:entries="@array/Notificationtone"
           android:summary="%s" 
           android:entryValues="@array/Notification_tone"
	       android:title="@string/Notification_tone"
	       android:dependency="Notification_checkbox" 
	       android:defaultValue="lydløs">     
        </ListPreference>      
        
<!--         <SeekBarPreference
			   android:defaultValue="22"
			   android:title="Set the default time"
			   android:key="Volume"
			   android:dependency="Notification_checkbox" 
			   >
  		 </SeekBarPreference> -->
        
    	<!-- </PreferenceCategory>
      </PreferenceScreen>  -->

	<!-- <PreferenceScreen  android:key="Azkar_påmindelse" android:title="@string/Azkar">  
		<PreferenceCategory android:title="@string/Azkar" >    
		    
		    <CheckBoxPreference
	            android:key="Morgen"
	            android:title="@string/Azkar_morgen"
				android:defaultValue="false">
	        </CheckBoxPreference>
	        
		    <CheckBoxPreference
	            android:key="Aften"
	            android:title="@string/Azkar_aften"
				android:defaultValue="false">
	        </CheckBoxPreference>   
		</PreferenceCategory>  
	</PreferenceScreen>         -->
   
 	</PreferenceCategory>
 	
  	<PreferenceCategory android:title="@string/Om" >
      	<Preference android:title="@string/Om"
      	    android:summary="Versionsnummer"
      	    android:key="OmButton"/>
  
 		       
 	 </PreferenceCategory>
 	
</PreferenceScreen>

     
     

