<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/TidTilSalahInfo"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/Version"
        android:src="@drawable/ic_sigada_pri_orange" >

	</ImageView>

    <TextView
        android:id="@+id/AppVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Versionnumber"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Facebook"
        android:textColor="#0101DF"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/GmailButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Gmail"
        android:textColor="#0101DF"
        android:textSize="30sp"
        android:textStyle="bold" />
 
</LinearLayout>